--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,29 @@ hr {
     font-size: 2rem;
 }
 
+ul {
+    list-style-type: none;
+}
+
+ul li {
+    /* padding-left: 1rem; */
+    /* border: 1px solid white; */
+    text-align: center;
+}
+
+/* BUTTONS */
+.ms_btn {
+    width: 50px;
+    height: 50px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: .6rem;
+}
+
 /* HEADER */
 
 header {
@@ -77,6 +100,7 @@ header {
 }
 
 /* FOOTER */
+
 footer {
     color: white;
 }
@@ -87,8 +111,8 @@ footer {
 
 .ms_footer-bottom {
     background-color: var(--header-footer-bg-color);
-    /* debug */
-    min-height: 4rem;
 }
 
-
+.ms_aqua-green {
+    color: var(--aqua-green-bg-color);
+}
