fix: classes and debug

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ hr {
     vertical-align: middle;
     border: 2px solid;
     color: inherit;
-    min-width: 10%;
+    min-width: 10vw;
     opacity: 1;
     border-color: inherit;
     border-radius: 3px;
